--- a/backend/backend-service/pom.xml
+++ b/backend/backend-service/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>backend-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>common</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
