--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -201,6 +201,11 @@
             <artifactId>curator-recipes</artifactId>
             <version>2.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.9</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-framework -->
     </dependencies>
 
