--- a/backend/backend-client/pom.xml
+++ b/backend/backend-client/pom.xml
@@ -34,6 +34,13 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- 分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
